--- a/index.html
+++ b/index.html
@@ -5,21 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
         <script src="/js/jquery-live-preview.js"></script>
+        <link href="/css/livepreview-demo.css" rel="stylesheet" type="text/css">
         
-        <style>
-            #livepreview_dialog
-            {
-                padding:0px;
-                height:200px;
-                width:300px;
-                background-color:#fff;
-                background-image:url('/images/icon_loading.gif');
-                background-repeat:no-repeat;
-                background-position:center center;
-                overflow:hidden;
-                position:absolute;
-            }
-        </style>
         
         <script type="text/javascript">
             $(document).ready(function() {
