--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Jquery Live Preview Example</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-        <script src="/js/jquery-live-preview.js"></script>
+        <script src="/js/jquery-live-preview.min.js"></script>
         <link href="/css/livepreview-demo.css" rel="stylesheet" type="text/css">
         
         
