--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     </head>
     <body>
         <h3>Jquery Live Preview Example</h3>
-        <a href="http://www.bing.com" target="_blank" class="livepreview">Hover over to preview, click to link!</a>
+        <p></p><a href="http://www.bing.com" target="_blank" class="livepreview">Hover over to preview, click to link!</a></p>
+        
+        <p><a href="http://www.cnn.com" target="_blank" class="livepreview" data-position="left">Hover over to preview another link positioned to the left inline, click to link!</a></p>
     </body>
 </html>
