Added close preview window on click

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Jquery Live Preview Quick Example</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-        <script src="/js/jquery-live-preview.min.js"></script>
-        <link href="/css/livepreview-demo.css" rel="stylesheet" type="text/css">
+        <script src="js/jquery-live-preview.js"></script>
+        <link href="css/livepreview-demo.css" rel="stylesheet" type="text/css">
         
         
         <script type="text/javascript">
@@ -21,7 +21,7 @@
              <p>&nbsp;</p>
             <p><a href="http://www.bing.com" target="_blank" class="livepreview">Hover over to preview, click to link!</a></p>
             <p><a href="http://www.cnn.com" target="_blank" class="livepreview" data-position="left">Hover over to preview another link positioned to the left inline, click to link!</a></p>
-            <p><a href="http://www.500px.com" target="_blank" class="livepreview" data-trigger="click">Click to preview right, then click again to link!</a></p>
+            <p><a href="http://www.500px.com" target="_blank" class="livepreview" data-trigger="click" target="_blank">Click to preview right, then click again to link!</a></p>
             <p><a href="http://www.bbcnews.com" target="_blank" class="livepreview" data-position="left" data-trigger="click">Click to preview left, then click again to link!</a></p>
         </div>
     </body>
