--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <div style="text-align:center;">
             <h3>Jquery Live Preview Quick Example</h3>
              <p>&nbsp;</p>
-            <p><a href="http://www.bing.com" target="_blank" class="livepreview">Hover over to preview, click to link!</a></p>
+            <p><a href="http://www.bing.com" target="_blank" class="livepreview" data-position="bottom">Hover over to preview, bottom positioned click to link!</a></p>
             <p><a href="http://www.cnn.com" target="_blank" class="livepreview" data-position="left">Hover over to preview another link positioned to the left inline, click to link!</a></p>
-            <p><a href="http://www.500px.com" target="_blank" class="livepreview" data-trigger="click" target="_blank">Click to preview right, then click again to link!</a></p>
+            <p><a href="http://www.bing.com" target="_blank" class="livepreview" data-position="right">Hover over to preview, link positioned to the right!</a></p>
+            <p><a href="http://www.cnn.com" target="_blank" class="livepreview" data-position="top">Hover over to preview another link positioned to the top inline, click to link!</a></p>
+            <p><a href="http://www.abcnews.com" target="_blank" class="livepreview" data-trigger="click" target="_blank">Click to preview right, then click again to link!</a></p>
             <p><a href="http://www.bbcnews.com" target="_blank" class="livepreview" data-position="left" data-trigger="click">Click to preview left, then click again to link!</a></p>
         </div>
     </body>
